# SlashGaming-Diablo-II-Module-Manager

./: .gitignore  CMakeLists.txt  LICENSE.md
SGD2ModuleManager/: CMakeLists.txt
SGD2ModuleManager/include/: dllapi_define.inc  dllapi_undefine.inc  module_manager.h
SGD2ModuleManager/include/sgd2mm/: module_manager.h
SGD2ModuleManager/src/: config.c  config.h  dll_main.c  error.c  error.h  filew.h  license.c  license.h  module.c  module.h  module_manager.c  module_manager_internal.c  module_manager_internal.h  win9x.c  win9x.h
SGD2ModuleManager/src/config/: config_default.c  config_default.h  config_global.c  config_global.h  config_ini.h  config_ini_key.h  config_ini_reader.c  config_ini_writer.c  config_struct.c  config_struct.h
SGD2ModuleManager/src/file/: file_content.c  file_content.h  file_count.c  file_count.h  file_list.c  file_list.h
SGD2ModuleManager/src/hash/: hash_crypt_provider.c  hash_crypt_provider.h  hash_crypt_public_key.c  hash_crypt_public_key.h  hash_sha1.c  hash_sha1.h  hash_sha384.c  hash_sha384.h  hash_shared.c  hash_shared.h
SGD2ModuleManager/src/module_manager/: module_manager_global.c  module_manager_global.h  module_manager_struct.c  module_manager_struct.h
SGD2ModuleManager/src/sgd2mm/: README.md  module_manager.c
SlashGaming-Diablo-II-Free-Mod-Loader/include/: dllexport_define.inc  dllexport_undefine.inc  license.h
SlashGaming-Diablo-II-Free-Mod-Loader/src/: dll_main.cc  license.c
SlashGaming-Diablo-II-Free-Mod-Loader/src/event/: d2gfx_on_create_window.cc  d2gfx_on_create_window.hpp  d2win_on_load_mpqs.cc  d2win_on_load_mpqs.hpp  on_create_window.cc  on_create_window.hpp  on_library_attach.cc  on_library_attach.hpp  on_library_detach.cc  on_library_detach.hpp
SlashGaming-Diablo-II-Free-Mod-Loader/src/helper/: mod_library.cc  mod_library.hpp
SlashGaming-Diablo-II-Free-Mod-Loader/src/patch/: asm_x86_macro.h  d2gfx_on_create_window_patch.cc  d2gfx_on_create_window_patch.hpp  d2win_on_load_mpqs_patch.cc  d2win_on_load_mpqs_patch.hpp  event_patches.cc  event_patches.hpp  on_create_window_patch.cc  on_create_window_patch.hpp
